[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83.0"
license = "MIT OR Apache-2.0"
keywords = ["quantum", "openqasm"]
categories = ["compilers"]
# TODO: GitHub Pages
homepage = "https://github.com/JarvisCraft/quanto"
repository = "https://github.com/JarvisCraft/quanto"
include = ["/src", "/examples"]

[workspace.dependencies]
quanto_lexer = { path = "crates/lexer" }
quanto_parser = { path = "crates/parser" }
quanto_runtime = { path = "crates/runtime" }
quanto_macros = { path = "crates/macros" }

# Proc macros
syn = "2.0.57"
quote = "1.0.35"
proc-macro2 = "1.0.82"

# Data
num-bigint = "0.4.6"
arbitrary-int = { version = "1.2", default-features = false }
smallvec = "1.13"

# Lexer
logos = "0.14.2"

# Parser
peg = "0.8.4"
pest = "2.7.10"
pest_derive = "2.7.10"

# Utilities
thiserror = "2.0"
derive_more = "1.0"
nevermore = "0.1.1"

# Documentation
document-features = "0.2.7"

[package]
name = "quanto"
description = "Quanto Language for Quantum Computations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
quanto_lexer.workspace = true
quanto_parser.workspace = true
quanto_runtime.workspace = true
quanto_macros = { workspace = true, optional = true }

# Documentation
document-features.workspace = true

[features]
default = ["std"]
std = ["quanto_runtime/std"]
## Enable Proc macros
macros = ["dep:quanto_macros"]

#! ## Runtime toggles
#!
#! The following flags specify the used runtime and thus are mutually exclusive.

## Enables `quantum-simulator`-based runtime.
rt-quantum-simulator = ["quanto_runtime/rt-quantum-simulator"]

[lints.rust]
unsafe_code = "forbid"

[[example]]
name = "main_attribute"
path = "examples/main_attribute.rs"
required-features = ["macros", "quanto_runtime/rt-quantum-simulator"]

[[example]]
name = "function_like"
path = "examples/function_like.rs"
required-features = ["std", "macros", "quanto_runtime/rt-quantum-simulator"]
