[package]
name = "quanto_lexer"
description = "Quanto language lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
logos.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
# TODO: hide behind a feature
peg = { workspace = true, optional = true }

[features]
peg = ["dep:peg"]
