[package]
name = "quanto_parser"
description = "Quanto language parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
quanto_lexer = { workspace = true, features = ["peg"] }
peg.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
